apps/n8n/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: n8n
  template:
    metadata:
      labels:
        app: n8n
    spec:
      automountServiceAccountToken: true
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: n8n
          image: docker.n8n.io/n8nio/n8n:1.123.39
          ports:
            - containerPort: 5678
          volumeMounts:
          - mountPath: /home/node/.n8n
            name: data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: n8n
---
apiVersion: v1
kind: Service
metadata:
  name: n8n
  annotations:
    tailscale.com/expose: "true"
    tailscale.com/tags: "tag:k8s"
spec:
  type: ClusterIP
  selector:
    app: n8n
  ports:
    - name: http
      port: 80
      targetPort: 5678
---
